# LIDAR_Station

./: .gitignore  MAPPING_GUIDE.md  README.md  SETUP_GUIDE.md
docs/: CURRENT_BUG.md  DEPENDENCY_CHECKLIST.md  LAST_MIN_LOG.md  LATENCY_ANALYSIS.md  LATENCY_AND_TENSORRT.md  LOG_JOURNAL.md  NYUSH_VISION_TDT_LIDAR_USAGE_GUIDE.md  QUEUE_FULL_DEBUG.md  RADAR_LIDAR_TIME_ALIGNMENT_AUDIT.md  RADAR_STATION_INTEGRATED_WORKFLOW.md  STUTTER_DIAGNOSIS.md  TESTMAP_LIDAR_ALIGNMENT.md  VISION_LIDAR_CALIBRATION_AND_COLLAB_GUIDE.md
mapping_ws/: test.pcd  test_rotated.pcd
model/ONNX/: yolo.onnx
scripts/: check_latency.py  check_latency.sh  check_radar_setup.sh  diagnose_detection.sh  diagnose_stutter.sh  install_tensorrt_dev.sh  rotate_pcd.py  start_fusion.sh  start_mapping.sh  test_minimal_stutter.sh  view_camera_opencv.py  wait_for_image_topics.sh
src/fusion/debug_map/: CMakeLists.txt  debug_map.cpp  package.xml
src/fusion/kalman_filter/include/: filter_plus.h  kalman_filter.h
src/fusion/kalman_filter/src/: kalman_filter.cpp
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/launch/: camera.launch.py
src/hik_camera/src/: hik_camera_node.cpp
src/lidar/cluster/include/: cluster.h
src/lidar/cluster/src/: cluster.cpp
src/lidar/dynamic_cloud/: CMakeLists.txt
src/lidar/dynamic_cloud/include/: dynamic_cloud.h
src/lidar/dynamic_cloud/launch/: lidar.launch.py  lidar_minimal.launch.py  lidar_tilt.launch.py
src/lidar/dynamic_cloud/scripts/: display_aligner_node.py
src/lidar/dynamic_cloud/src/: dynamic_cloud.cpp
src/lidar/localization/src/: localization.cpp
src/lidar/pointcloud_transform/: CMakeLists.txt  package.xml
src/lidar/pointcloud_transform/src/: pointcloud_transform_node.cpp
src/livox_driver/livox_ros2_driver/config/: livox_lidar_config.json
src/livox_driver/livox_sdk_vendor/: CMakeLists.txt
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/config/: MID360_config.json  pointcloud.rviz  pointcloud_lidar.rviz
src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
src/livox_ros_driver2/src/call_back/: livox_lidar_callback.cpp
src/tdt_vision/: CMakeLists.txt
src/tdt_vision/calibrate/src/: calibrate.cpp
src/tdt_vision/cmake/modules/: libnvinferConfig.cmake
src/tdt_vision/detect/include/: detect.h
src/tdt_vision/detect/scripts/: calibrate_testmap_lidar_alignment.py  nyush_detect_node.py  nyush_world_node.py
src/tdt_vision/detect/src/: detect.cpp
src/tdt_vision/launch/: calib_camera.launch.py  calib_rosbag.launch.py  map_server_launch.py  nyush_detect.launch.py  nyush_integration.launch.py  run_rosbag.launch.py
src/tdt_vision/maps/: map.yaml
src/tdt_vision/radar_utils/: radar_utils.cpp
src/tdt_vision/resolve/include/: resolve.h
src/tdt_vision/resolve/src/: resolve.cpp
src/tdt_vision/yolo/: CMakeLists.txt
watchDog/: calib.sh  camera.sh  lidar.sh
